@@ -2,19 +2,17 @@
 
 
 # Flow  
-A Polyphonic, Multitimbral, Modular Additive Synthesizer (Version 10)
+A Polyphonic, Multitimbral, Modular Additive Synthesizer (Version 11)
  
 By Sean Luke (sean@cs.gmu.edu) \
 With Help from V. Hoyle \
-Copyright 2018 by George Mason University
 
 Related projects:  
 
 * [Edisyn](https://github.com/eclab/edisyn), a patch editor toolkit with sophisticated exploration tools.
-* [Seq](https://github.com/eclab/seq), a very unusual hierarchical and modular music sequencer.
 * [Gizmo](https://cs.gmu.edu/~sean/projects/gizmo/), an Arduino-based MIDI Swiss Army knife.
 * [Seq](https://github.com/eclab/seq), a very unusual hierarchical and modular music sequencer.
-* [Grains Firmware](https://github.com/eclab/grains), a large collection of Arduino programs (synths, modulators, and so on) targeting the AE Modular Grains module.
+* [Arduino Firmware](https://github.com/eclab/grains) (oscillators, modulators, etc.) for the AE Modular Grains module.  Includes an ultralight but full-featured [MIDI library for small microcontrollers](https://github.com/eclab/grains/tree/main/midi).
 * [*Computational Music Synthesis*](https://cs.gmu.edu/~sean/book/synthesis/), an open-content book on building software synthesizers.
 
 ## Donations
@@ -42,8 +40,7 @@ Flow has almost 70 modules of different shapes and sizes, and currently supports
 
 * Three songs made using only Flow in multitimbral mode, with Ableton serving as just the sequencer.  They are called [8](https://cs.gmu.edu/~sean/projects/synth/log/#8), [9](https://cs.gmu.edu/~sean/projects/synth/log/#9), and [10](https://cs.gmu.edu/~sean/projects/synth/log/#10).  8 is the best one. All three come with the Flow patches and Ableton files to recreate them.
 
-[//]: <> ( Former hello-world demo: https://www.youtube.com/watch?v=w3aao8Sp0sQ )
-
+* One song using Flow in multitimbral mode with [Seq](https://github.com/eclab/seq) serving as the sequencer.  It's called [14](https://cs.gmu.edu/~sean/projects/synth/log/#14).  It's nothing special, it was written to stress-test Seq.
 
 ### Patches
 
@@ -61,20 +58,30 @@ Sadly, it's a whopping 70MB because it includes the Java VM.  :-(
 
 You'll also want to download some [patches](https://cs.gmu.edu/~eclab/projects/flow/patches.zip), some [wavetables](https://waveeditonline.com/), and the [manual](https://cs.gmu.edu/~eclab/projects/flow/flow.pdf).  Pay attention to section 2.1 of the manual, where it explains how to tune Flow for your computer speed.  
 
-Sierra has really locked down the ability to run an application that's not from a commercial, paying Apple Developer.  And GMU is not one.  So you will have to instruct Sierra to permit Flow to run.
+MacOS has lately locked down the ability to run an application that's not from a commercial, paying Apple Developer.  And GMU is not one.  So you will have to instruct Sierra to permit Flow to run.
 
-Let's assume you stuck Flow in the /Applications directory as usual.  Then:
+#### Installing under MacOS X Prior to Sequoia
+
+This is pretty easy. CONTROL-Click on Flow's App Icon, and while holding Control down, select "Open".  Now instead of telling you that Flow cannot be opened because it's from an unidentified developer, you'll be given the option to do so. You probably will only have to do this once.
+
+#### Installing under MacOS X Sequoia and Later
+
+Apple has made this much more annoying now, to everyone's consternation.  You'll have to use the Terminal program.  Let's assume you stuck Flow in the /Applications directory as usual.  Now we have to tell Gatekeeper to allow Flow to run on your machine:
 
 1. Run the Terminal Program (in /Applications/Utilities/)
-2. Type the following command and hit RETURN: `   sudo spctl --add /Applications/Flow.app`
-4. Enter your password and hit RETURN.
+2. Type the following command and hit RETURN: `   sudo xattr -cr /Applications/Flow.app`
+4. Enter your password and hit RETURN
 5. Quit the Terminal Program
 
-Now you should be able to run Flow.  Let us know if this all works.
+Now you should be able to run Flow.  You only have to do this once.  This should work with earlier versions of OS X too. 
 
-#### Notes on Catalina...
+If you want to use Flow in combination with a DAW, see the manual's section on doing that.
 
-* Flow cannot access your laptop's microphone on Catalina.  I don't know if it can access external microphones.
+You can also run Flow from its jar file from the command line: see "Running from the command line" at end of these instructions. 
+
+#### Notes on Catalina and later...
+
+* Flow cannot access your laptop's microphone on Catalina and later.  I don't know if it can access external microphones.
 
 #### Rosetta and the M1
 
@@ -87,7 +94,7 @@ At present Flow only runs under Rosetta on the M1, because its package contains 
 
 The following should work (but has not been tested):
 
-1. [Download and install at least Java 11](https://www.oracle.com/technetwork/java/javase/downloads).  The JRE should work fine.  Earlier versions of Java have a bug which causes Java apps (like Flow) to make teeny tiny windows on the latest high-resolution screens.
+1. [Download and install at least Java 20](https://www.oracle.com/technetwork/java/javase/downloads).  The JRE should work fine.  Earlier versions of Java have a bug which causes Java apps (like Flow) to make teeny tiny windows on the latest high-resolution screens.
 
 2. Download Flow's jar file, called [flow.jar](https://cs.gmu.edu/~eclab/projects/flow/flow.jar).
 
@@ -95,16 +102,18 @@ The following should work (but has not been tested):
 
 4. Double-click on flow.jar to launch Flow.
 
+5. See **Running from the command line** below for more glitch-free options.
+
 #### Note
 
-Flow makes heavy use of Java preferences.  There is a longstanding Java/Windows bug which breaks Java preferences and will cause Flow to be unable to make any of your preferences persistent.  In Java 11 the bug should be fixed, but if it's not, please let us know.
+Flow makes heavy use of Java preferences.  There is a longstanding Java/Windows bug which breaks Java preferences and will cause Flow to be unable to make any of your preferences persistent.  As of Java 11 the bug should be fixed, but if it's not, please let us know.
 
 
 ### Installation and Running on Linux
 
-Flow should work fine if you have installed at least *Java 8*.
+Flow should work fine if you have installed at least *Java 20*.
 
-1. Install at least Java 8 (openjdk).
+1. Install at least Java 20 (openjdk).
 
 2. Download Flow's jar file, called [flow.jar](https://cs.gmu.edu/~eclab/projects/flow/flow.jar).
 
@@ -114,16 +123,20 @@ Flow should work fine if you have installed at least *Java 8*.
 
 5. Thereafter you should be able to just double-click on the file to launch Flow.
 
+6. See **Running from the command line** below for more glitch-free options.
+
 
 ### Running from the command line (MacOS, Windows, Linux)
 
-1. Make sure Java is installed as discussed earlier.
+1. Make sure Java 20 or later installed.
 
 2. Download Flow's jar file, called [flow.jar](https://cs.gmu.edu/~eclab/projects/flow/flow.jar).
 
 3. Grab some [patches](https://cs.gmu.edu/~eclab/projects/flow/patches.zip), some [wavetables](https://waveeditonline.com/), and the [manual](https://cs.gmu.edu/~eclab/projects/flow/flow.pdf).  
 
 4. Run Flow as:   `java -jar flow.jar`
+
+5. Flow benefits from a lower-latency garbage collector to prevent it from glitching.  You might instead run Flow as:     `java -jar flow.jar -XX:+UseZGC -XX:MaxGCPauseMillis=1`
 
 
 
